added createChartTest